# querycrafter

./: .dockerignore  .gitignore  Dockerfile  MIT-LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: main.yml
agents/: general_agent.py  utils.py
agents/__tests__/: test_general_agent.py
chains/: document_tables.py  metabase.py  sql_runner.py
chains/__tests__/: test_document_chain.py  test_metabase.py  test_sql_runner.py
ci/: gcp_demo.py
config/: default.yaml
prompts/: column_extractor.py  comment_creator.py  info_extractor.py  metabase_creator.py  metabase_graphs.py  sql_runner.py
prompts/__tests__/: test_column_extractor.py  test_comment_creator.py  test_info_extractor.py  test_metabase.py  test_metabase_graphs.py  test_sql_runner.py
routers/: slack.py
tools/: general_tools.py
tools/__tests__/: test_general_tools.py
utils/: config_loaders.py  database.py  metabase.py
utils/__tests__/: test_config_loaders.py  test_database.py
