[tool.poetry]
name = "database copilot"
version = "0.1.0"
description = "database copilot using GPT"
authors = ["Jairo Garcia <biohazerimperion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
sqlalchemy = "^1.4.47"
langchain = "^0.0.175"
pandas = "^2.0.1"
openai = "^0.27.7"
pytest = "^7.2.2"
psycopg2-binary = "^2.9.6"
python-json-logger = "^2.0.7"
tiktoken = "^0.4.0"
faiss-cpu = "^1.7.1"
slack-sdk = "^3.21.3"
slack-bolt = "^1.18.0"
flask = "^2.3.2"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
httpx = "^0.24.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"